creating beans by configuration methods