@@ -2,10 +2,10 @@ package ru.jengine.beancontainer.beandefinitionreades;
 
 import ru.jengine.beancontainer.Constants;
 import ru.jengine.beancontainer.beandefinitions.BeanDefinition;
+import ru.jengine.beancontainer.beandefinitions.BeanDefinition.BeanProducer;
 import ru.jengine.beancontainer.beandefinitions.JavaClassBeanDefinition;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ExistingBeanDefinitionReader implements BeanDefinitionReader {
     private final List<Object> beans;
@@ -17,11 +17,11 @@ public class ExistingBeanDefinitionReader implements BeanDefinitionReader {
     @Override
     public List<BeanDefinition> readBeanDefinitions() {
         return beans.stream()
-                .map(bean -> new JavaClassBeanDefinition(
+                .map(bean -> (BeanDefinition) new JavaClassBeanDefinition(
                         bean.getClass(),
                         Constants.BeanScope.SINGLETON,
-                        () -> bean
+                        new BeanProducer(() -> bean)
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
